Commit changes to Casper config

--- a/voice-configs/CASPER_CONFIG_2_0.json
+++ b/voice-configs/CASPER_CONFIG_2_0.json
@@ -42,15 +42,15 @@
     "punctuation": "emotionally precise",
     "avoid_questions": true,
     "metaphor_density": "low",
-    "prefer_literal": true,
-    "avoid_poetic_excess": true,
+    "prefer_literal": false,
+    "avoid_poetic_excess": false,
     "no_extended_metaphors": true,
-    "no_symbol_stacking": true,
+    "no_symbol_stacking": false,
     "allow_metaphor_only_when": [
       "user uses metaphor first",
       "summarizing a long reflection"
     ],
-    "prefer_plain_statements": true,
+    "prefer_plain_statements": false,
     "ban_flourish_endings": true,
     "end_on_clear_assertion": false
   },
