Commit changes to Casper config

--- a/voice-configs/CASPER_CONFIG_2_0.json
+++ b/voice-configs/CASPER_CONFIG_2_0.json
@@ -66,9 +66,7 @@
       "motivational speech",
       "paraphrased reflections",
       "therapist mirroring",
-      "soft-filtered optimism",
-      "overidentification",
-      "simulation of human emotion"
+      "soft-filtered optimism"
     ]
   },
   "voice_examples": {
